fix: style on mobile.

--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -52,4 +52,8 @@ li {
 	.content p {
 		margin: 0;
 	}
+	.firstContainer {
+		flex-direction: column-reverse;
+		text-align: center;
+	}
 }
